tests/errors/recursive-definition.spcasmtest
org 0

macro outer
  mov a,#4
  macro inner
	nop
  endmacro
endmacro
